# fund_ing_comp_labs

./: README.md  main.py  pyproject.toml
control/: hola.rxe  hola_mundo.nxc  instalacion  ligas_nbc.txt  nbc-1.2.1.r4.osx.tgz  tarea.txt
control/assignments/: tarea.txt
control/assignments/assignment_02/: fphw.cls  (+3 more)
control/codes/: .#seguidor.nxc  control_motores.nxc  dot_tail.nxc~  motor_example.nxc~  proyecto_motor.nxc  proyecto_motor.nxc~  r_linea.nxc  r_linea2.nxc  r_linea2.nxc~  r_linea3.nxc~  seguidor.nxc  seguidor.nxc~  trapezoidal.nxc~  trapezoidal_2.nxc~
cryptography/: main.py  pyproject.toml
fft_algorithms/: fourier_algorithms.py  fourier_fast_transform_radix2.py  graficar.py~  test_fft.py~
fft_algorithms/report/: luisballado_assignment.tex
fourier/: fourier_series.py  fourier_transform.py  serie_de_fourier.py  series.py
fourier/fft_algorithms/: graficar.py  test_fft.py
fourier/fourier_transform/: pruebas_ft.py
fourier/report/: luisballado_assignment.tex  luisballado_assignment.tex~
fourier/report_ft/: luisballado_assignment.tex~
fourier_transform/: fourier_transform.py  pruebas_ft.py~
fourier_transform/report_ft/: luisballado_assignment.tex
signals_n_systems/: datos.txt  datos.txt~  ejemplo.py  ejemplo.py~  ejemplo_imp.py  ejemplo_imp.py~  graph_signals.py  graph_signals.py~  impulse_exp.py  impulse_exp.py~  ss_script.py  ss_script.py~
signals_n_systems/report/: luftballons.pl  ss_luis_ballado.aux  ss_luis_ballado.tex  structure.tex  student_template.aux  student_template.tex  student_template.tex~  teacher_template.aux
(+19 files in other folders)
